crates/uselesskey-core-negative/tests/snapshots/snapshots_negative__facade_der_deterministic.snap
---
source: crates/uselesskey-core-negative/tests/snapshots_negative.rs
expression: result
---
variant_string: "corrupt:facade-der-v1"
original_len: 8
result_len: 8
is_stable: true
differs_from_original: true
