crates/uselesskey-core-negative/tests/snapshots/snapshots_negative__facade_der_flip_byte.snap
---
source: crates/uselesskey-core-negative/tests/snapshots_negative.rs
expression: result
---
operation: flip_byte_0
original_len: 8
result_len: 8
differs_from_original: true
