crates/uselesskey-core-negative/tests/snapshots/snapshots_negative__facade_pem_deterministic.snap
---
source: crates/uselesskey-core-negative/tests/snapshots_negative.rs
expression: result
---
variant_string: "corrupt:facade-v1"
is_stable: true
differs_from_original: true
output_len: 87
